@@ -1,5 +1,11 @@
 2009-07-20  Philip Withnall  <philip@tecnocode.co.uk>
 
+	* src/plugins/tracker/totem-tracker-widget.c
+	(totem_tracker_widget_init): Homogenise the Local Search plugin's
+	appearance with the Jamendo and YouTube plugins. (Closes: #572292)
+
+2009-07-20  Philip Withnall  <philip@tecnocode.co.uk>
+
 	* configure.in: Limit the Tracker versions we can build the Local
 	Search plugin against to 0.6.x. (Closes: #580726)
 
